Add Preview button to the static site
