# admin-cms-app/frontend-svelte/src/generated-api.ts
@@ -67,6 +67,8 @@ export interface HealthResponse {
 export interface SiteData {
   gitUrl: string;
   name: string;
+  /** @nullable */
+  previewUrl?: string | null;
   slug: string;
 }
 
@@ -167,6 +169,94 @@ export function createHealthz<
 
   return query;
 }
+
+export type stopPreviewResponse204 = {
+  data: void;
+  status: 204;
+};
+
+export type stopPreviewResponseSuccess = stopPreviewResponse204 & {
+  headers: Headers;
+};
+export type stopPreviewResponse = stopPreviewResponseSuccess;
+
+export const getStopPreviewUrl = () => {
+  return `/preview`;
+};
+
+export const stopPreview = async (
+  options?: RequestInit,
+): Promise<stopPreviewResponse> => {
+  return fetchWithServerUrl<stopPreviewResponse>(getStopPreviewUrl(), {
+    ...options,
+    method: "DELETE",
+  });
+};
+
+export const getStopPreviewMutationOptions = <
+  TError = unknown,
+  TContext = unknown,
+>(options?: {
+  mutation?: CreateMutationOptions<
+    Awaited<ReturnType<typeof stopPreview>>,
+    TError,
+    void,
+    TContext
+  >;
+  request?: SecondParameter<typeof fetchWithServerUrl>;
+}): CreateMutationOptions<
+  Awaited<ReturnType<typeof stopPreview>>,
+  TError,
+  void,
+  TContext
+> => {
+  const mutationKey = ["stopPreview"];
+  const { mutation: mutationOptions, request: requestOptions } = options
+    ? options.mutation &&
+      "mutationKey" in options.mutation &&
+      options.mutation.mutationKey
+      ? options
+      : { ...options, mutation: { ...options.mutation, mutationKey } }
+    : { mutation: { mutationKey }, request: undefined };
+
+  const mutationFn: MutationFunction<
+    Awaited<ReturnType<typeof stopPreview>>,
+    void
+  > = () => {
+    return stopPreview(requestOptions);
+  };
+
+  return { mutationFn, ...mutationOptions };
+};
+
+export type StopPreviewMutationResult = NonNullable<
+  Awaited<ReturnType<typeof stopPreview>>
+>;
+
+export type StopPreviewMutationError = unknown;
+
+export const createStopPreview = <TError = unknown, TContext = unknown>(
+  options?: () => {
+    mutation?: CreateMutationOptions<
+      Awaited<ReturnType<typeof stopPreview>>,
+      TError,
+      void,
+      TContext
+    >;
+    request?: SecondParameter<typeof fetchWithServerUrl>;
+  },
+  queryClient?: () => QueryClient,
+): CreateMutationResult<
+  Awaited<ReturnType<typeof stopPreview>>,
+  TError,
+  void,
+  TContext
+> => {
+  return createMutation(
+    () => ({ ...getStopPreviewMutationOptions(options?.()) }),
+    queryClient,
+  );
+};
 
 export type listSitesResponse200 = {
   data: SiteListResponse;
@@ -356,6 +446,116 @@ export const createCreateSite = <TError = void, TContext = unknown>(
 > => {
   return createMutation(
     () => ({ ...getCreateSiteMutationOptions(options?.()) }),
+    queryClient,
+  );
+};
+
+export type previewSiteResponse200 = {
+  data: SiteResponse;
+  status: 200;
+};
+
+export type previewSiteResponse404 = {
+  data: void;
+  status: 404;
+};
+
+export type previewSiteResponse500 = {
+  data: void;
+  status: 500;
+};
+
+export type previewSiteResponseSuccess = previewSiteResponse200 & {
+  headers: Headers;
+};
+export type previewSiteResponseError = (
+  | previewSiteResponse404
+  | previewSiteResponse500
+) & {
+  headers: Headers;
+};
+
+export type previewSiteResponse =
+  | previewSiteResponseSuccess
+  | previewSiteResponseError;
+
+export const getPreviewSiteUrl = (slug: string) => {
+  return `/sites/${slug}/preview`;
+};
+
+export const previewSite = async (
+  slug: string,
+  options?: RequestInit,
+): Promise<previewSiteResponse> => {
+  return fetchWithServerUrl<previewSiteResponse>(getPreviewSiteUrl(slug), {
+    ...options,
+    method: "POST",
+  });
+};
+
+export const getPreviewSiteMutationOptions = <
+  TError = void,
+  TContext = unknown,
+>(options?: {
+  mutation?: CreateMutationOptions<
+    Awaited<ReturnType<typeof previewSite>>,
+    TError,
+    { slug: string },
+    TContext
+  >;
+  request?: SecondParameter<typeof fetchWithServerUrl>;
+}): CreateMutationOptions<
+  Awaited<ReturnType<typeof previewSite>>,
+  TError,
+  { slug: string },
+  TContext
+> => {
+  const mutationKey = ["previewSite"];
+  const { mutation: mutationOptions, request: requestOptions } = options
+    ? options.mutation &&
+      "mutationKey" in options.mutation &&
+      options.mutation.mutationKey
+      ? options
+      : { ...options, mutation: { ...options.mutation, mutationKey } }
+    : { mutation: { mutationKey }, request: undefined };
+
+  const mutationFn: MutationFunction<
+    Awaited<ReturnType<typeof previewSite>>,
+    { slug: string }
+  > = (props) => {
+    const { slug } = props ?? {};
+
+    return previewSite(slug, requestOptions);
+  };
+
+  return { mutationFn, ...mutationOptions };
+};
+
+export type PreviewSiteMutationResult = NonNullable<
+  Awaited<ReturnType<typeof previewSite>>
+>;
+
+export type PreviewSiteMutationError = void;
+
+export const createPreviewSite = <TError = void, TContext = unknown>(
+  options?: () => {
+    mutation?: CreateMutationOptions<
+      Awaited<ReturnType<typeof previewSite>>,
+      TError,
+      { slug: string },
+      TContext
+    >;
+    request?: SecondParameter<typeof fetchWithServerUrl>;
+  },
+  queryClient?: () => QueryClient,
+): CreateMutationResult<
+  Awaited<ReturnType<typeof previewSite>>,
+  TError,
+  { slug: string },
+  TContext
+> => {
+  return createMutation(
+    () => ({ ...getPreviewSiteMutationOptions(options?.()) }),
     queryClient,
   );
 };
